<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_bottom_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/monitor_bottom_selector"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_organization"
        android:icon="@drawable/organization_bottom_selector"
        android:title="@string/title_organization" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message_bottom_selector"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/person_bottom_selector"
        android:title="@string/title_person" />

</menu>