<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my.LoginActivity">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_login_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_72"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="长江大保护"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_36"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_internal_name"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_21" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_settingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@mipmap/icon_setting_transparent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_contentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/login_account" />

            <EditText
                android:id="@+id/et_police_code"
                android:layout_width="@dimen/dp_240"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/colorTransPrant"
                android:hint="@string/please_input_code"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorLine"
                tools:ignore="Autofill" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@color/colorLine" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pass_hint_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/login_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_toLeftOf="@+id/see_password_imageview"
                android:layout_toRightOf="@+id/pass_hint_imageview"
                android:background="@color/colorTransPrant"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorLine"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/see_password_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/login_see_password" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@color/colorLine" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/colorThite"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_forget_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="right"
            android:layout_marginRight="@dimen/dp_40"
            android:text="@string/forget_psw"
            android:textColor="@color/colorLine"
            android:textSize="18sp" />
    </LinearLayout>

    <!--环境切换,不参与到国际化-->
    <RelativeLayout
        android:id="@+id/rl_environment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_contentLayout"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_14"
        android:paddingRight="@dimen/dp_14"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="环境切换"
            android:textColor="@color/color_224CD0"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_cur_environment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="测试环境"
            android:textColor="@color/color_858585"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_13"
        android:text="@string/copy_right_info"
        android:textColor="@color/colorLine" />
</RelativeLayout>