<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.my.ResetPswActivity">

    <RelativeLayout
        android:id="@+id/rl_topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/color_224CD0"
        android:paddingRight="@dimen/dp_24"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_15"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/reset_psw"
            android:textColor="@color/colorThite"
            android:textSize="@dimen/sp_21" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_contentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="@dimen/dp_240"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/colorTransPrant"
                android:hint="@string/please_input_phone_number"
                android:inputType="textPhonetic"
                android:maxLines="1"
                android:textColor="@color/colorLine" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@color/colorLine" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_toLeftOf="@+id/tv_get_verification_code"
                android:layout_toRightOf="@+id/pass_hint_imageview"
                android:background="@color/colorTransPrant"
                android:hint="@string/please_input_verification_code"
                android:inputType="textPhonetic"
                android:maxLines="1"
                android:textColor="@color/colorLine" />

            <TextView
                android:id="@+id/tv_get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/get_verification_code"
                android:textColor="@color/blue_188FFF" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@color/colorLine" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/old_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_40">

            <EditText
                android:id="@+id/new_password_edittext"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_3"
                android:background="@color/colorTransPrant"
                android:hint="请输入10～20位新密码"
                android:maxLength="20"
                android:paddingLeft="@dimen/dp_10"
                android:textColor="@color/colorLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_edittext"/>

            <EditText
                android:id="@+id/confirm_password_edittext"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@color/colorTransPrant"
                android:hint="再次确认密码"
                android:maxLength="16"
                android:paddingLeft="@dimen/dp_10"
                android:textColor="@color/colorLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/new_password_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_password_edittext" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_edittext"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:text="@string/go_next"
            android:textColor="@color/colorThite"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>