<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.data.DealResultStatActivity">


    <RelativeLayout
        android:id="@+id/rl_topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/color_224CD0"
        android:paddingRight="@dimen/dp_24"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_15"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/iv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/forewarn_stat"
            android:textColor="@color/colorThite"
            android:textSize="@dimen/sp_21" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_9"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_10">

        <View
            android:id="@+id/view_blue1"
            android:layout_width="@dimen/dp_4"
            android:layout_height="@dimen/dp_15"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_9"
            android:background="@color/color_5099FD"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_deal_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_toRightOf="@+id/view_blue1"
            android:text="处理结果统计"
            android:textColor="@color/color_333333"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <com.noober.background.view.BLRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_9"
        android:layout_marginRight="@dimen/dp_9"
        app:bl_corners_radius="3dp"
        app:bl_solid_color="@color/white">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pie_chart_deal_result"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_220"
            android:layout_below="@+id/tv_alarm_type_title_2"
            android:layout_marginBottom="@dimen/dp_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/pie_chart_deal_result">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_85"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/find_ship_bg">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_account"
                        android:padding="@dimen/dp_8"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/dp_8">

                        <TextView
                            android:id="@+id/tv_verbal_warning"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="158"
                            android:gravity="right"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/verbal_warning"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/find_people_bg">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_account"
                        android:padding="@dimen/dp_8"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/dp_8">

                        <TextView
                            android:id="@+id/tv_administrative_penalty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="158"
                            android:gravity="right"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/administrative_penalty"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                    </LinearLayout>


                </RelativeLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_85"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_15">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/illegal_fishing_bg">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_account"
                        android:padding="@dimen/dp_8"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/dp_8">

                        <TextView
                            android:id="@+id/tv_administrative_attachment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="158"
                            android:gravity="right"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/administrative_attachment"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/staff_retention_bg">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_account"
                        android:padding="@dimen/dp_8"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:padding="@dimen/dp_8">

                        <TextView
                            android:id="@+id/tv_other_penalty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="158"
                            android:gravity="right"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other_penalty"
                            android:textSize="@dimen/sp_18"
                            android:textColor="@color/white"/>

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </com.noober.background.view.BLRelativeLayout>
</LinearLayout>